整合API
