# app/controller/user.js
@@ -5,13 +5,13 @@ const Controller = require('egg').Controller;
 class UserController extends Controller {
   async loginOrRegister() {
     const { ctx } = this;
-    const result = await ctx.service.user.loginOrRegister('test', '222222');
+    const result = await ctx.service.user.loginOrRegister();
     ctx.body = result;
   }
 
   async getUserInfo() {
     const { ctx } = this;
-    const result = await ctx.service.user.getUserInfo(ctx.header.Authorization);
+    const result = await ctx.service.user.getUserInfo();
     ctx.body = result;
   }
 }
